v0.0.109 => fixed up kb profile home page then made some css changes; added counter for loading piece on kb profile; text no wrap in announcement get list

--- a/src/app/components/sections/kickball/kickball-profile.css
+++ b/src/app/components/sections/kickball/kickball-profile.css
@@ -59,7 +59,19 @@
     white-space: normal;
 }
 
-
+.table-dark{
+    --bs-table-bg: none !important;
+}
+.table{
+    border-bottom-width:none !important;
+}
+.gradient-kickball{
+    font-size:25px;
+    text-align:center;
+}
+.img-thumbnail{
+    background-color: rgb(90, 90, 90) !important;
+}
 @media only screen and (min-width: 901px) {
     .img-thumbnail{
         width: 100px;
@@ -91,8 +103,8 @@
 }
 @media only screen and (max-width: 900px) {
     .img-thumbnail{
-        width: 45px;
-        height: 45px;
+        width: 100px;
+        height: 100px;
         padding: 0.1rem;
     }
     .btn .btn-sm{
@@ -104,7 +116,7 @@
        font-size: 10px;
      }
      .teamName{
-        font-size: 8px;
+        font-size: 20px;
      }
     
      .side-info {
@@ -118,7 +130,33 @@
         --bs-btn-padding-x: .25rem;
         --bs-btn-font-size: .4rem;
     }
+    .custom-btn-size .badge{
+        --bs-badge-font-size:1.1em;
+    }
     .badge{
-        --bs-badge-font-size: 0.4em;
+        --bs-badge-font-size: 0.8em;
+    }
+
+    .table-kb-profile th,
+    .table-kb-profile td {
+        padding: 0.2rem;
+        font-size: 0.4rem;
+        /* Reduce font size */
+    }
+
+    .table-kb-profile th[style*="min-width"],
+    .table-kb-profile td[style*="min-width"] {
+        min-width: 20px;
+        /* Override minimum width on smaller screens */
+    }
+
+    .table-responsive {
+        overflow-x: auto;
+    }
+
+    .custom-btn-size {
+        --bs-btn-padding-y: .1rem;
+        --bs-btn-padding-x: .5rem;
+        --bs-btn-font-size: .5rem;
     }
 }
